--- a/Anchor.toml
+++ b/Anchor.toml
@@ -6,14 +6,14 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-pyth_oracle_1 = "2UA3M6dSJQjrfTdzAiL2vMvubWoch1nTXK5TRaNGuiY4"
+pyth_oracle_1 = "5hC6mtKFiK6YBZq2PMdju5rP2qGuuHsXnNS7Neqhtays"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "devnet"
+cluster = "https://devnet.helius-rpc.com/?api-key=bdb45793-138e-4ff8-b8f4-cd7dba5545df"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+test = "npx tsx --test --test-reporter=spec tests/*.ts"
