--- a/package.json
+++ b/package.json
@@ -5,20 +5,32 @@
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.30.1",
+    "@coral-xyz/anchor": "^0.31.1",
     "@pythnetwork/hermes-client": "^1.0.4",
     "@pythnetwork/price-service-client": "^1.9.0",
     "@pythnetwork/pyth-solana-receiver": "^0.8.0",
-    "rpc-websockets": "^7.11.2"
+    "@solana-developers/helpers": "^2.8.1",
+    "@solana/web3.js": "^1.95.2",
+    "rpc-websockets": "^7.11.2",
+    "tsx": "^4.20.5",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
+    "@types/ws": "^8.5.12",
     "chai": "^4.3.4",
     "mocha": "^9.0.3",
     "prettier": "^2.6.2",
-    "ts-mocha": "^10.0.0",
     "typescript": "^4.3.5"
+  },
+  "overrides": {
+    "rpc-websockets": "^7.11.2",
+    "@solana/web3.js": "^1.95.2"
+  },
+  "resolutions": {
+    "rpc-websockets": "^7.11.2",
+    "@solana/web3.js": "^1.95.2"
   }
 }
