Remove yarn, ts-mocha, Anchor JS and otjhe

--- a/programs/get-prices-onchain/Cargo.toml
+++ b/programs/get-prices-onchain/Cargo.toml
@@ -16,7 +16,6 @@ no-idl = []
 no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build"]
 
-
 [dependencies]
 anchor-lang = "0.31.1"
-
+pyth-solana-receiver-sdk = "0.6.1"
