--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
+  "name": "get-prices-onchain",
   "license": "ISC",
   "scripts": {
+    "build": "anchor build",
+    "test": "anchor test",
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
+    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
+    "show-versions": "bash show-versions.sh",
+    "regenerate-client": "anchor build && npx tsx create-codama-client.ts"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.31.1"
+    "@codama/nodes-from-anchor": "^1.2.5",
+    "@codama/renderers-js": "^1.3.4",
+    "@pythnetwork/pyth-solana-receiver": "^0.8.0",
+    "@types/node": "^24.3.0",
+    "codama": "^1.3.3",
+    "prettier": "^2.6.2",
+    "solana-kite": "^1.5.4",
+    "tsx": "^4.20.5",
+    "typescript": "^5.7.3"
   },
-  "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^9.0.3",
-    "ts-mocha": "^10.0.0",
-    "@types/bn.js": "^5.1.0",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.0.0",
-    "typescript": "^5.7.3",
-    "prettier": "^2.6.2"
-  }
+  "type": "module"
 }
